# tripleBarrier

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TTBM_Demo_Guide.md  build.bat  build_and_run.bat  build_and_run.ps1  copy_xgboost_dll.bat  run.bat
.github/workflows/: cmake-gtest.yml
backend/: CMakeLists.txt  FileHandler.cpp
backend/data/: BarrierConfig.h  CSVDataSource.cpp  CSVDataSource.h  CUSUMFilter.cpp  CUSUMFilter.h  Constants.h  DataCleaningUtils.h  DataPreprocessor.cpp  DataPreprocessor.h  DataRow.h  DataSource.h  EventSelector.cpp  EventSelector.h  FeatureCalculator.cpp  FeatureCalculator.h  FeatureExtractor.cpp  FeatureExtractor.h  HardBarrierLabeler.cpp  HardBarrierLabeler.h  IBarrierLabeler.h  LabeledEvent.h  OverlapPurger.cpp  OverlapPurger.h  PortfolioSimulator.cpp  PortfolioSimulator.h  PreprocessedRow.h  ProbabilisticBarrierLabeler.cpp  ProbabilisticBarrierLabeler.h  SampleIndependenceValidator.cpp  SampleIndependenceValidator.h  TTBMLabeler.cpp  TTBMLabeler.h  TripleBarrierLabeler.cpp  TripleBarrierLabeler.h  VolatilityCalculator.h
backend/ml/: BarrierMLStrategy.cpp  BarrierMLStrategy.h  DataUtils.cpp  DataUtils.h  MLPipeline.cpp  MLPipeline.h  MLSplits.h  MetricsCalculator.cpp  MetricsCalculator.h  ModelUtils.cpp  ModelUtils.h  PortfolioSimulator.cpp  PortfolioSimulator.h  TreeEnsembleModel.cpp  TreeEnsembleModel.h  XGBoostModel.cpp  XGBoostModel.h
backend/tests/: TestBarrierConfig.cpp  TestBarrierLabelers.cpp  TestCSVDataSource.cpp  TestCUSUMFilter.cpp  TestDataPreprocessor.cpp  TestEventSelector.cpp  TestFeatureCalculator.cpp  TestFeatureExtractor.cpp  TestPreprocessedRow.cpp  TestTTBMLabeler.cpp  TestTripleBarrierLabeler.cpp  TestVolatilityCalculator.cpp
backend/utils/: ErrorHandling.h  Exceptions.h
frontend/: BarrierConfigDialog.cpp  BarrierConfigDialog.h  CMakeLists.txt  FeatureSelectionDialog.cpp  FeatureSelectionDialog.h  FileHandler.cpp  FileHandler.h  MLHyperparamsDialog.cpp  MLHyperparamsDialog.h  MainWindow.cpp  MainWindow.h  MainWindow.ui
frontend/config/: ApplicationConfig.cpp  ApplicationConfig.h  VisualizationConfig.h
frontend/feature/: FeaturePreviewDialog.cpp  FeaturePreviewDialog.h
frontend/plot/: LabeledEventPlotter.cpp  LabeledEventPlotter.h  PlotStrategy.cpp  PlotStrategy.h
frontend/services/: DataService.cpp  DataService.h  MLService.cpp  MLService.h
frontend/state/: ApplicationState.cpp  ApplicationState.h
frontend/ui/: BaseDialog.cpp  BaseDialog.h  MainWindowUI.cpp  MainWindowUI.h  UIStrings.cpp  UIStrings.h
frontend/utils/: AsyncTaskManager.cpp  AsyncTaskManager.h  CSVExportUtils.cpp  CSVExportUtils.h  DateParsingUtils.cpp  DateParsingUtils.h  DialogUtils.cpp  DialogUtils.h  ErrorHandler.cpp  ErrorHandler.h  ErrorHandlingStrategy.cpp  ErrorHandlingStrategy.h  FeaturePreviewUtils.cpp  FeaturePreviewUtils.h  FileDialogUtils.cpp  FileDialogUtils.h  InputValidator.cpp  InputValidator.h  LabelingUtils.cpp  LabelingUtils.h  TypeConversionAdapter.h  UnifiedErrorHandling.h  UserInputUtils.cpp  UserInputUtils.h  ValidationFramework.cpp  ValidationFramework.h
uploads/: README.md
